--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../assets/iconsPortfolio.png" type="image/x-icon">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./iconsPortfolio.png" type="image/x-icon">
 
     <script src="https://unpkg.com/feather-icons"></script>
     <link
@@ -51,7 +51,7 @@
     <!-- About section -->
     <section class="about">
         <div class="main">
-            <img src="../assets/2.png">
+            <img src="./2.png">
             <div class="about-text">
                 <h2>About me</h2>
                 <h5>Front-End <span>Web Developer</span></h5>
@@ -74,7 +74,7 @@
 
         <div class="box">
             <div class="card">
-                <img src="../assets/menu.svg">
+                <img src="./menu.svg">
                 <h5>Web Developer</h5>
                 <div class="pra">
                     <p>
@@ -88,7 +88,7 @@
             </div>
 
             <div class="card">
-                <img src="../assets/user.svg">
+                <img src="./user.svg">
                 <h5>Web Developer</h5>
                 <div class="pra">
                     <p>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="card">
-                <img src="../assets/bell.svg">
+                <img src="./bell.svg">
                 <h5>Web Developer</h5>
                 <div class="pra">
                     <p>
