--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         it needs to work across all devices. Secondly, it needs to be fast as possible.
                     </p>
                     <p style="text-align: center;">
-                        <a class="button" href="#">Read More</a>
+                        <a class="button" href="https://tiagolucas.github.io/TodoList/">Read More</a>
                     </p>
                 </div>
             </div>
