--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                         it needs to work across all devices. Secondly, it needs to be fast as possible.
                     </p>
                     <p style="text-align: center;">
-                        <a class="button" href="#" target="_blank">Read More</a>
+                        <a class="button" href="https://tiagolucas.github.io/Dev.Finance-/" target="_blank">Read
+                            More</a>
                     </p>
                 </div>
             </div>
