--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="./iconsPortfolio.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" href="../assets/iconsPortfolio.png" type="image/x-icon">
 
     <script src="https://unpkg.com/feather-icons"></script>
     <link
@@ -24,14 +24,14 @@
             <h2 class="logo">Portfo<span>lio</span></h2>
 
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="#hero">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#service">Services</a></li>
                 <li><a href="#">Skills</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#contact-me">Contact</a></li>
             </ul>
 
-            <a href="#" class="btn">Subscribe</a>
+            <a href="../files/CurrículoTiagoLucas.pdf" class="btn" target="_blank">Curriculum</a>
         </nav>
 
         <div class="content">
@@ -42,7 +42,7 @@
             <div class="newslatter">
                 <form action="#">
                     <input type="email" name="email" id="mail" placeholder="Enter Your Email">
-                    <input type="submit" name="submit" value="Lets Start">
+                    <input type="submit" name="submit" value="Submit">
                 </form>
             </div>
         </div>
@@ -51,17 +51,25 @@
     <!-- About section -->
     <section class="about">
         <div class="main">
-            <img src="./2.png">
+            <img src="../assets/tec.png">
             <div class="about-text">
                 <h2>About me</h2>
                 <h5>Front-End <span>Web Developer</span></h5>
                 <p>
-                    I am a front-end web developer. I can provide clean code and pixel perfect
-                    design. I also make the website more & more interactive with web animations.
-                    A responsive design makes your website accessible to all users, regardless
-                    of their device.
+                    I'm Tiago, graduated in Information System. I really like WEB development,
+                    I want to be a great developer, I seek this by studying and dedicating
+                    myself a lot.
                 </p>
-                <button type="button">Let's Talk</button>
+                <p>
+                    I am always willing to take on great challenges and face them with great
+                    enthusiasm, this motivates me a lot to seek and improve every day.
+                </p>
+                <p>
+                    I like HTML, CSS and JAVASCRIPT, I am developing my English by taking
+                    course, to be able to have better communication with other cultures and for professional
+                    improvement.
+                </p>
+                <button type="button">Know more</button>
             </div>
         </div>
     </section>
@@ -69,49 +77,63 @@
     <!-- Service section Start -->
     <div class="service">
         <div class="title">
-            <h2>Our Service</h2>
+            <h2>Development <span>Practices</span></h2>
         </div>
 
         <div class="box">
             <div class="card">
-                <img src="./menu.svg">
-                <h5>Web Developer</h5>
+                <i data-feather="list"></i>
+                <h5>To Do List</h5>
                 <div class="pra">
                     <p>
-                        Every website should be built with two primary goals: Firstly,
-                        it needs to work across all devices. Secondly, it needs to be fast as possible.
+                        Developed using pure HTML, CSS and JS, where you can register, marked as
+                        performed and delete activities that are on the list.
                     </p>
                     <p style="text-align: center;">
-                        <a class="button" href="https://tiagolucas.github.io/TodoList/" target="_blank">Read More</a>
+                        <a class="button" href="https://tiagolucas.github.io/TodoList/" target="_blank">Page</a>
                     </p>
                 </div>
             </div>
 
             <div class="card">
-                <img src="./user.svg">
-                <h5>Web Developer</h5>
+                <i data-feather="divide-square"></i>
+                <h5>Calculator</h5>
                 <div class="pra">
                     <p>
-                        Every website should be built with two primary goals: Firstly,
-                        it needs to work across all devices. Secondly, it needs to be fast as possible.
+                        Simple calculator that uses JS to do the basic operations, addition,
+                        subtraction, division and multiplication.
                     </p>
                     <p style="text-align: center;">
-                        <a class="button" href="https://tiagolucas.github.io/calculator/" target="_blank">Read More</a>
+                        <a class="button" href="https://tiagolucas.github.io/calculator/" target="_blank">Page</a>
                     </p>
                 </div>
             </div>
 
             <div class="card">
-                <img src="./bell.svg">
-                <h5>Web Developer</h5>
+                <i data-feather="dollar-sign"></i>
+                <h5>Finances</h5>
                 <div class="pra">
                     <p>
-                        Every website should be built with two primary goals: Firstly,
-                        it needs to work across all devices. Secondly, it needs to be fast as possible.
+                        Page that can track your income and expenses, where you can include
+                        both situations. Using JS, HTML and CSS.
                     </p>
                     <p style="text-align: center;">
-                        <a class="button" href="https://tiagolucas.github.io/Dev.Finance-/" target="_blank">Read
-                            More</a>
+                        <a class="button" href="https://tiagolucas.github.io/Dev.Finance-/" target="_blank">Page</a>
+                    </p>
+                </div>
+            </div>
+
+            <div class="card">
+                <i data-feather="user-plus"></i>
+                <h5>Registration</h5>
+                <div class="pra">
+                    <p>
+                        Small customer record in HTML, CSS and JS, where you can create, edit,
+                        delete. Using local storage to store the data.
+                    </p>
+                    <p style="text-align: center;">
+                        <a class="button" href="https://tiagolucas.github.io/CustomerRegistration/"
+                            target="_blank">Page</a>
                     </p>
                 </div>
             </div>
@@ -121,7 +143,7 @@
     <!-- Contact Me -->
     <div class="contact-me">
         <p>Let Me Get You A Beautiful Website</p>
-        <a href="#" class="button-two">Hire Me</a>
+        <a href="../files/CurrículoTiagoLucas.pdf" class="button-two" target="_blank">Hire Me</a>
     </div>
 
     <!-- Footer start -->
