--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="shortcut icon" href="../assets/iconsPortfolio.png" type="image/x-icon">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="shortcut icon" href="assets/iconsPortfolio.png" type="image/x-icon">
 
     <script src="https://unpkg.com/feather-icons"></script>
     <link
@@ -31,7 +31,7 @@
                 <li><a href="#contact-me">Contact</a></li>
             </ul>
 
-            <a href="../files/CurrículoTiagoLucas.pdf" class="btn" target="_blank">Curriculum</a>
+            <a href="files/CurrículoTiagoLucas.pdf" class="btn" target="_blank">Curriculum</a>
         </nav>
 
         <div class="content">
@@ -51,7 +51,7 @@
     <!-- About section -->
     <section class="about">
         <div class="main">
-            <img src="../assets/tec.png">
+            <img src="assets/tec.png">
             <div class="about-text">
                 <h2>About me</h2>
                 <h5>Front-End <span>Web Developer</span></h5>
@@ -143,7 +143,7 @@
     <!-- Contact Me -->
     <div class="contact-me">
         <p>Let Me Get You A Beautiful Website</p>
-        <a href="../files/CurrículoTiagoLucas.pdf" class="button-two" target="_blank">Hire Me</a>
+        <a href="files/CurrículoTiagoLucas.pdf" class="button-two" target="_blank">Hire Me</a>
     </div>
 
     <!-- Footer start -->
@@ -175,7 +175,7 @@
         </p>
     </footer>
 
-    <script src="../js/script.js"></script>
+    <script src="./js/script.js"></script>
     <script>
         feather.replace()
     </script>
