--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </p>
     </footer>
 
-    <script src="./js/script.js"></script>
+    <script src="js/script.js"></script>
     <script>
         feather.replace()
     </script>
