--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             Tiago <span>Lucas</span>
         </p>
         <p>
-            For more HTML, CSS, and coding tutorial - please click on the link below to subscribe to my channel:
+            Below are some contact links - Click to open any of my social networks, and get in touch:
         </p>
 
         <div class="social">
